2000-10-05  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: uses the fptools macro for determining ghc's
	version number

2000-10-02  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* errors/Errors.hs (showError): special handling of internal positions

	* admin/Common.hs: added internal positions

	* admin/BaseVersion.hs (versnum): 0.22.2

2000-09-15  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* ../configure.in: corrected ghc version number extraction to
	correctly handle patch levels; added happy - most have gone lost
	earlier...

2000-09-12  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* syntax/Pretty.hs (<>): debugged

2000-09-11  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* syntax/Pretty.hs (Pretty): type class for pretty printing
	(infixOp): added
	(usedWhen): added
	(punctuate): added
	(dot): added

	* admin/BaseVersion.hs (versnum): 0.22.1

2000-09-07  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* syntax/Pretty.hs: Revision of the interface; the interface is
	now 90% compatible to SimonPJ's `Pretty' module; debugging
	(fullRender): dropping leading '\n's
	some more combinators

	* admin/BaseVersion.hs (versnum): 0.22.0

2000-09-03  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* admin/Common.hs (tabPos): Roman pointed out that tab stops
	should be at 1, 9, ... rather than 0, 8, ...

2000-09-02  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* admin/BaseVersion.hs (versnum): 0.21.1

2000-08-18  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>

	* sysdep/Makefile: Moved the posix stuff into an extra module,
	which can be enabled individually

	* ../configure.in: CygWin support; based on suggestions by Anibal
	Maffioletti Rodrigues de DEUS <anibaldedeus@email.com>

	* ../configure.in: uses -silent on lndir only if supported (isn't
	supported before X11R6, says Jan Kort <kort@wins.uva.nl>)

	* admin/BaseVersion.hs (versnum): 0.21.0

2000-08-08  Manuel M. T. Chakravarty  <chak@cse.unsw.edu.au>
